[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syre-excel-template-runner"
dynamic = ["version"]
description = 'Excel template runner for Syre.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["syre"]
authors = [
  { name = "Brian Carlsen", email = "carlsen.bri@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "openpyxl",
  "syre-formulas",
  "syre",
]

[project.urls]
Documentation = "https://github.com/syre-data/excel-template-runner#readme"
Issues = "https://github.com/syre-data/excel-template-runner/issues"
Source = "https://github.com/syre-data/excel-template-runner"

[tool.hatch.version]
path = "src/syre_excel_template_runner/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "pandas~=2.0",
  "openpyxl~=3.1",
  "syre",
  "mypy>=1.0.0",
  "syre-formulas",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/syre_excel_template_runner tests}"

[tool.coverage.run]
source_pkgs = ["syre_excel_template_runner", "tests"]
branch = true
parallel = true
omit = [
  "src/syre_excel_template_runner/__about__.py",
]

[tool.coverage.paths]
syre_excel_template_runner = ["src/syre_excel_template_runner", "*/syre-excel-template-runner/src/syre_excel_template_runner"]
tests = ["tests", "*/syre-excel-template-runner/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
